@@ -1,5 +1,5 @@
 /*
- * "$Id: ps-pdf.cxx,v 1.89.2.31 2001/02/28 20:34:55 mike Exp $"
+ * "$Id: ps-pdf.cxx,v 1.89.2.32 2001/02/28 21:54:07 mike Exp $"
  *
  *   PostScript + PDF output routines for HTMLDOC, a HTML document processing
  *   program.
@@ -4259,6 +4259,9 @@ parse_table(tree_t *t,		/* I - Tree to parse */
 	  temp_height = cells[row][col]->height;
     }
 
+    if (temp_height > (PageLength / 8))
+      temp_height = PageLength / 8;
+
     if (*y < (bottom + 2 * (border + cellpadding) + temp_height) &&
         temp_height < (top - bottom - 2 * (border + cellpadding)))
     {
@@ -8177,5 +8180,5 @@ flate_write(FILE  *out,		/* I - Output file */
 
 
 /*
- * End of "$Id: ps-pdf.cxx,v 1.89.2.31 2001/02/28 20:34:55 mike Exp $".
+ * End of "$Id: ps-pdf.cxx,v 1.89.2.32 2001/02/28 21:54:07 mike Exp $".
  */
